// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GenericPreview - Snapshots > matches snapshot for audio type 1`] = `
<div>
  <audio
    class="w-full cursor-auto"
    controls=""
    data-testid="audio"
    preload="metadata"
    src="https://example.com/audio.mp3"
  />
</div>
`;

exports[`GenericPreview - Snapshots > matches snapshot for image type 1`] = `
<div>
  <a
    href="https://example.com/photo.jpg"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Image preview"
      class="h-auto max-w-full w-full rounded-md object-contain"
      data-nimg="1"
      decoding="async"
      height="600"
      loading="lazy"
      src="https://example.com/photo.jpg"
      style="color: transparent;"
      width="800"
    />
  </a>
</div>
`;

exports[`GenericPreview - Snapshots > matches snapshot for loading state 1`] = `
<div>
  <div
    class="mx-auto w-full flex-col flex justify-between gap-6 rounded-md p-6 lg:flex-row @max-xl/grid:flex-col!"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex-col flex gap-y-2"
      data-testid="container"
    >
      <div
        class="animate-pulse bg-muted h-5 w-48 rounded-md"
        data-slot="skeleton"
      />
      <div
        class="animate-pulse bg-muted h-4 w-32 rounded-md"
        data-slot="skeleton"
      />
    </div>
    <div
      class="animate-pulse bg-muted h-25 w-45 shrink-0 rounded-md"
      data-slot="skeleton"
    />
  </div>
</div>
`;

exports[`GenericPreview - Snapshots > matches snapshot for video type 1`] = `
<div>
  <video
    class="h-auto max-w-full rounded-md bg-black outline-none focus-visible:ring-2 focus-visible:ring-ring w-full cursor-auto object-contain"
    controls=""
    data-testid="video"
    preload="metadata"
    src="https://example.com/video.mp4"
  />
</div>
`;

exports[`GenericPreview - Snapshots > matches snapshot for website type with all fields 1`] = `
<div>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    data-testid="generic-website-preview"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="mx-auto w-full flex-col flex justify-between gap-6 rounded-md bg-muted p-6 lg:flex-row @max-xl/grid:flex-col!"
      data-testid="container"
    >
      <div
        class="mx-auto w-full flex-col flex gap-y-2"
        data-testid="container"
      >
        <p
          class="text-2xl font-bold text-foreground wrap-break-word"
          data-testid="typography"
        >
          Example Website Title
        </p>
        <div
          class="mx-auto w-full flex flex-row items-center gap-x-1"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-globe shrink-0 text-muted-foreground"
            fill="none"
            height="13"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
            />
            <path
              d="M2 12h20"
            />
          </svg>
          <p
            class="text-sm max-w-50 overflow-hidden font-medium text-ellipsis whitespace-nowrap text-muted-foreground sm:max-w-none sm:whitespace-normal"
            data-testid="typography"
          >
            example.com
          </p>
        </div>
      </div>
      <img
        alt="Website social image"
        class="max-w-full h-25 w-45 shrink-0 rounded-md object-cover object-center"
        data-nimg="1"
        decoding="async"
        height="100"
        loading="lazy"
        src="https://example.com/og-image.jpg"
        style="color: transparent;"
        width="180"
      />
    </div>
  </a>
</div>
`;

exports[`GenericPreview - Snapshots > matches snapshot for website type without image 1`] = `
<div>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    data-testid="generic-website-preview"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="mx-auto w-full flex-col flex justify-between gap-6 rounded-md bg-muted p-6 lg:flex-row @max-xl/grid:flex-col!"
      data-testid="container"
    >
      <div
        class="mx-auto w-full flex-col flex gap-y-2"
        data-testid="container"
      >
        <p
          class="text-2xl font-bold text-foreground wrap-break-word"
          data-testid="typography"
        >
          Example Website Title
        </p>
        <div
          class="mx-auto w-full flex flex-row items-center gap-x-1"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-globe shrink-0 text-muted-foreground"
            fill="none"
            height="13"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
            />
            <path
              d="M2 12h20"
            />
          </svg>
          <p
            class="text-sm max-w-50 overflow-hidden font-medium text-ellipsis whitespace-nowrap text-muted-foreground sm:max-w-none sm:whitespace-normal"
            data-testid="typography"
          >
            example.com
          </p>
        </div>
      </div>
    </div>
  </a>
</div>
`;
